<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.uoquo</groupId>
    <artifactId>api-micro</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <description>组合打包</description>

    <properties>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>api-gateway</module>
        
        <module>service-platform</module>
        
        <module>scheduler-center</module>
    </modules>

</project>
